# prima

./: .eleventy.js  .gitignore  README.md  about.html  asia-occidente-mahmood.html  baaria.html  benjamin-button.html  benvenuti-al-sud.html  commesse-essere-avere.html  filenames.ipynb  i-cento-passi-1-10.html  i-cento-passi-90-100.html  index.html  la-vita-è-bella.html  le-compere.html  le-fate-ignoranti.html  master-of-none.html  mettici-la-salsa.html  netlify.toml  package-lock.json  package.json  pagefind.yml  patrizia-cavalli.html  prisencolinensinainciusol.html  pyproject.toml  sorelle.html  sotto-il-sole-di-riccione.html  viaggio-sola.html
_data/: en_items.json  en_items.yaml  en_navigation.yaml  it_items.yaml  it_navigation.yaml  settings.yaml  translations.json  videos.yaml
_includes/: base.njk  footer.html  homepage.njk  item.njk  lesson.njk  lezione.njk  navbar.html  page.njk
admin/: config.yml
en/: about.html  about.md  accessibility.md  browse-media.html  browse-media.njk  en.json  explore-categories.html  index-page.njk  index.md  index.njk  items.njk  lesson-index.md  lesson-index.njk  lessons.njk  search.njk  team.md  terms.md
it/: accessibilita.md  cerca.njk  chi-siamo.md  circa.md  elementi.njk  esplora-le-categorie.html  index.md  index.njk  indice-delle-lezioni.md  indice.njk  informazioni.html  informazioni.md  it.json  lezioni.njk  sfoglia-i-media.md  sfoglia-i-media.njk  termini.md
prima/: main.py  utils.py
site/: about.html  asia-occidente-mahmood.html  baaria.html  benjamin-button.html  benvenuti-al-sud.html  commesse-essere-avere.html  (+14 more)
(+488 files in other folders)
