[tool.poetry]
name = "prima"
version = "0.1.0"
description = ""
authors = ["apjanco <apjanco@upenn.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.6.1"}
fastapi = "^0.85.0"
Markdown = "^3.4.1"
srsly = "^2.4.4"
Jinja2 = "^3.1.2"
uvicorn = "^0.18.3"
lunr = "^0.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
prima = "prima.main:typer_app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
